--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
     height: 85%;
     padding-inline: 1rem;
     position: relative;
-    z-index: -1;
+    z-index: 1;
 }
 
 .content {
